--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calender In JS</title>
+    <title>CALCULATOR In JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="table">
-            <h1>CALENDER IN JS</h1>
+            <h1>CALCULATOR IN JS</h1>
            <input type="text" class="text" value="" placeholder="0">
            <div class="cell5">
 
